# rust-discord-bot

./: Cargo.toml  README.md
src/: main.rs  modules.rs
src/modules/: functions.rs  load.rs
