[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = "1.0.199"
serde_json = "1.0.116"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
